--- a/FoodDeliveryWebApplication/FoodDeliveryWebApplication/FoodDeliveryWebApplication.csproj
+++ b/FoodDeliveryWebApplication/FoodDeliveryWebApplication/FoodDeliveryWebApplication.csproj
@@ -251,7 +251,6 @@
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Models\ReviewRating.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Models\UserAddedBankAccounts.cs" />
     <Compile Include="Models\UserEdit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -288,6 +287,7 @@
     <Content Include="Content\css\CreatedCSS\hyperlink.css" />
     <Content Include="Content\css\CreatedCSS\PageLoader.css" />
     <Content Include="Content\css\CreatedCSS\SideBarNav.css" />
+    <Content Include="Content\css\CreatedCSS\starRatingDisplay.css" />
     <Content Include="Content\css\fontawesome.css" />
     <Content Include="Content\css\fontawesome.min.css" />
     <Content Include="Content\css\fontstyles.css" />
@@ -441,6 +441,10 @@
     <Content Include="Views\Customer\OrdersHistory.cshtml" />
     <Content Include="Views\Customer\ActiveOrders.cshtml" />
     <Content Include="Views\ReviewNRating\PostAReview.cshtml" />
+    <Content Include="Views\ReviewNRating\DisplayReviews.cshtml" />
+    <Content Include="Views\Payment\AddBankDetails.cshtml" />
+    <Content Include="Views\Payment\UserBankAccounts.cshtml" />
+    <Content Include="Views\Payment\DeleteBankAcc.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
